<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IntelligenceSystem</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--xml中定义文字-->
    <string name="user_account">账号</string>
    <string name="user_password">密码</string>
    <string name="user_login">登录</string>
    <string name="user_logout">退出</string>
    <string name="remember_password">记住密码</string>


    <string name="input_user_name">"请输入用户名"</string>
    <string name="input_password">"请输入密码"</string>
    <string name="input_password_num">"密码必须大于等于6位"</string>


    <!--  activity string  -->
    <string name="activity_me">"我的"</string>
    <string name="title_activity_module">ModuleActivity</string>
    <string name="tab_text_1">上模</string>
    <string name="tab_text_2">下模</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base" tools:ignore="ExtraTranslation">BaseActivity</string>

</resources>
